Add WIP modal for settings and update changelog for v1.3.3

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
         </div>
     </div>
 
+    <!-- WIP Modal -->
+    <div id="wip-modal" class="modal">
+        <div class="modal-content wip-content">
+            <span class="wip-close-button close-button">&times;</span>
+            <p>WIP</p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
