--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <title>minimalist tic tac toe</title>
 </head>
 <body>
-    <img src="images/square.png" alt="Minimalist Tic Tac Toe Logo" class="website-logo">
     <div class="header-container">
-        <h1>&lt;minimalist tic tac toe&gt;</h1>
+        <h1>minimalist tic tac toe</h1>
     </div>
 
   <div class="button-container">
